--- a/SimpleTensorflowDemo_1008/SimpleTensorflowDemo_1008/app/build.gradle
+++ b/SimpleTensorflowDemo_1008/SimpleTensorflowDemo_1008/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion "28.0.0"
+    compileSdkVersion 26
+    buildToolsVersion '28.0.2'
     defaultConfig {
         applicationId 'com.example.jpkim.simpletensorflowdemo'
-        minSdkVersion 28
-        targetSdkVersion 28
+        minSdkVersion 26
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -26,17 +26,18 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:28.0.0'
+    compile 'com.android.support:appcompat-v7:26.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.1.3'
-//    compile 'com.flurgle:camerakit:0.9.17'
-    compile 'com.wonderkiln:camerakit:0.11.1' //flugle 카메라 앱이 더이상 지원이 안되어 wonderkiln으로 수정 에러가 문제라면 이 것이 문제일수도?
+    //    compile 'com.flurgle:camerakit:0.9.17'
+    compile 'com.wonderkiln:camerakit:0.11.1'
+    //flugle 카메라 앱이 더이상 지원이 안되어 wonderkiln으로 수정 에러가 문제라면 이 것이 문제일수도?
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:recyclerview-v7:28.0.0'
+    compile 'com.android.support:recyclerview-v7:26.0.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.commit451:PhotoView:1.2.4'
     compile 'com.isseiaoki:simplecropview:1.0.13'
     compile 'com.yongchun:com.yongchun.imageselector:1.1.0'
-    compile 'org.tensorflow:tensorflow-android:1.2.0-rc0'
+    compile 'org.tensorflow:tensorflow-android:1.12.0'
     compile 'com.karumi:dexter:4.1.0'
 }
 configurations.all {
